==============================================================================
    TAME Changelog
    (C) 2019 Matt Tropiano
==============================================================================

0.9BETA14
.........

	- Fixed ListAddAt() with a negative index - now it returns false, since
	  nothing is added.
	- Added ListNew(), StrIsRegex() functions.
	
	
0.9BETA13
.........

	- STRREPLACE() now replaces every occurrence of a string in both Java and 
	  JS.
	- Added STRFORMAT() for formatting strings.
	- SUBSTRING() behavior was changed to clamp start and end indices, if end 
	  is equal to or before start, returns empty string.
	- All OS/Java distributions can now have their "tame" and "tamec" scripts 
	  symlinked to safely.


0.9BETA12
.........

	- Fixed broken list equality/comparison.
	- Fixed deserializing 64-bit floats in the JS implementation.
	- Fixed deserializing 64-bit integers (up to 53-bits) in the JS 
	  implementation.
	- Fixed reading the inheritance hierarchy from modules in JS. 
	- The Java/NodeJS shell implementations return exit codes - mostly for
	  detecting quit on FATAL vs. QUIT.
	- Changed the behavior of AsList() in order to differentiate it from 
	  wrapping a value in a list literal.


0.9BETA11
.........

	- JS interpreter now reads modules from binary serialization.
	- Split NodeJS and NodeJS Module distributions.
	- Added "charset" switch to TAME's Java Shell and Compiler for specifying
	  the input charset for the files being read. Default is system locale.


0.9BETA10
.........

	- The console shell now has a blurb about save/load states.
	- The NodeJS embedded compiler outputs now have a "--help" runtime mode.
	- Made all output cues lower-case by default.


0.9BETA9
........

	- Fixed Open Actions running target blocks twice in the Java 
	  implementation.
	- Fixed Open Actions causing TypeErrors in the JS implementation.
	- TAMEC can take an arbitrary starting file for the JS compiler, expanding