@@ -24,7 +24,7 @@
             <Keywords name="Folders in comment, open"></Keywords>
             <Keywords name="Folders in comment, middle"></Keywords>
             <Keywords name="Folders in comment, close"></Keywords>
-            <Keywords name="Keywords1">NOOP ADDCUE TEXT TEXTLN TEXTF TEXTFLN PAUSE WAIT ASBOOLEAN ASINT ASFLOAT ASSTRING LENGTH STRCONCAT STRREPLACE STRREPLACEPATTERN STRREPLACEPATTERNALL STRINDEX STRLASTINDEX STRCONTAINS STRCONTAINSPATTERN STRCONTAINSTOKEN STRSTARTSWITH STRENDSWITH SUBSTRING STRLOWER STRUPPER STRCHAR STRTRIM LISTADD LISTADDAT LISTREMOVE LISTREMOVEAT LISTCONCAT LISTINDEX LISTCONTAINS FLOOR CEILING ROUND FIX SQRT PI E SIN COS TAN MIN MAX CLAMP IRANDOM FRANDOM GRANDOM TIME SECONDS MINUTES HOURS DAYS FORMATTIME OBJECTHASNAME OBJECTHASTAG ADDOBJECTNAME ADDOBJECTTAG ADDOBJECTTAGTOALLIN REMOVEOBJECTNAME REMOVEOBJECTTAG REMOVEOBJECTTAGFROMALLIN GIVEOBJECT REMOVEOBJECT MOVEOBJECTSWITHTAG OBJECTCOUNT HASOBJECT OBJECTHASNOOWNER PLAYERISINROOM PLAYERCANACCESSOBJECT BROWSE BROWSETAGGED ELEMENTHASANCESTOR SETPLAYER SETROOM PUSHROOM POPROOM SWAPROOM CURRENTPLAYERIS NOCURRENTPLAYER CURRENTROOMIS NOCURRENTROOM IDENTITY HEADER</Keywords>
+            <Keywords name="Keywords1">NOOP ADDCUE TEXT TEXTLN TEXTF TEXTFLN PAUSE WAIT ASBOOLEAN ASINT ASFLOAT ASSTRING ASLIST LENGTH EMPTY STRCONCAT STRREPLACE STRREPLACELAST STRREPLACEALL STRINDEX STRLASTINDEX STRCONTAINS STRSPLIT STRJOIN STRSTARTSWITH STRENDSWITH SUBSTRING STRLOWER STRUPPER STRCHAR STRTRIM STRFORMAT ISREGEX REGEXCONTAINS REGEXFIND REGEXFINDLAST REGEXGET REGEXGETLAST REGEXGETALL REGEXMATCHES REGEXSPLIT LISTNEW LISTADD LISTADDAT LISTREMOVE LISTREMOVEAT LISTCONCAT LISTINDEX LISTCONTAINS FLOOR CEILING ROUND FIX SQRT PI E SIN COS TAN MIN MAX CLAMP IRANDOM FRANDOM GRANDOM TIME SECONDS MINUTES HOURS DAYS FORMATTIME OBJECTHASNAME OBJECTHASTAG ADDOBJECTNAME ADDOBJECTTAG ADDOBJECTTAGTOALLIN REMOVEOBJECTNAME REMOVEOBJECTTAG REMOVEOBJECTTAGFROMALLIN GIVEOBJECT REMOVEOBJECT MOVEOBJECTSWITHTAG OBJECTCOUNT HASOBJECT OBJECTHASNOOWNER PLAYERISINROOM PLAYERCANACCESSOBJECT BROWSE BROWSETAGGED ELEMENTHASANCESTOR SETPLAYER SETROOM PUSHROOM POPROOM SWAPROOM CURRENTPLAYERIS NOCURRENTPLAYER CURRENTROOMIS NOCURRENTROOM IDENTITY HEADER</Keywords>
             <Keywords name="Keywords2">true false Infinity NaN</Keywords>
             <Keywords name="Keywords3">if else while for quit end break continue finish module world room player object container action general modal transitive ditransitive open restricted named tagged modes uses conjunctions determiners forbids allows local clear archetype function return this extend override strict reversed queue</Keywords>
             <Keywords name="Keywords4">#</Keywords>
